# tomson_task

./: CMakeLists.txt
src/: main.cpp
src/Calculate/: calculate_classes.cpp  calculate_classes.h
src/Renderer/: Renderer.cpp  Renderer.h
